# services/api-service/validator.service.ts
@@ -13,8 +13,10 @@ import {
 	ResponseDto,
 	RestOptions,
 } from '../../types';
-import { DbContextParameters } from 'moleculer-db';
+import { DbContextParameters, QueryOptions } from 'moleculer-db';
 import { IValidator } from '../../entities';
+import { LIST_NETWORK } from '../../common/constant';
+import { ObjectId } from 'bson';
 
 /**
  * @typedef {import('moleculer').Context} Context Moleculer's Context
@@ -47,7 +49,13 @@ export default class ValidatorService extends MoleculerDBService<
 	 *          name: chainid
 	 *          required: true
 	 *          type: string
+	 *          enum: ["aura-testnet","serenity-testnet-001","halo-testnet-001","theta-testnet-001","osmo-test-4","evmos_9000-4",]
 	 *          description: "Chain Id of network need to query"
+	 *        - in: query
+	 *          name: operatorAddress
+	 *          required: false
+	 *          type: string
+	 *          description: "operator address"
 	 *        - in: query
 	 *          name: pageLimit
 	 *          required: false
@@ -60,6 +68,12 @@ export default class ValidatorService extends MoleculerDBService<
 	 *          default: 0
 	 *          type: number
 	 *          description: "Page number, start at 0"
+	 *        - in: query
+	 *          name: nextKey
+	 *          required: false
+	 *          default:
+	 *          type: string
+	 *          description: "key for next page"
 	 *      responses:
 	 *        '200':
 	 *          description: Register result
@@ -70,7 +84,14 @@ export default class ValidatorService extends MoleculerDBService<
 	@Get('/', {
 		name: 'getByChain',
 		params: {
-			chainid: { type: 'string', optional: false },
+			chainid: {
+				type: 'string',
+				optional: false,
+				enum: LIST_NETWORK.map((e) => {
+					return e.chainId;
+				}),
+			},
+			operatorAddress: { type: 'string', optional: true, default: null },
 			pageLimit: {
 				type: 'number',
 				optional: true,
@@ -87,6 +108,11 @@ export default class ValidatorService extends MoleculerDBService<
 				convert: true,
 				max: 100,
 			},
+			nextKey: {
+				type: 'string',
+				optional: true,
+				default: null,
+			},
 		},
 		cache: {
 			ttl: 10,
@@ -94,21 +120,51 @@ export default class ValidatorService extends MoleculerDBService<
 	})
 	async getByChain(ctx: Context<GetValidatorRequest, Record<string, unknown>>) {
 		let response: ResponseDto = {} as ResponseDto;
+		if (ctx.params.nextKey) {
+			try {
+				new ObjectId(ctx.params.nextKey);
+			} catch (error) {
+				return (response = {
+					code: ErrorCode.WRONG,
+					message: ErrorMessage.VALIDATION_ERROR,
+					data: {
+						message: 'The nextKey is not a valid ObjectId',
+					},
+				});
+			}
+		}
 		try {
-			let result = await this.adapter.find({
-				query: { 'custom_info.chain_id': ctx.params.chainid },
-				limit: ctx.params.pageLimit,
-				offset: ctx.params.pageOffset,
-			});
-			let count = await this.adapter.count({
-				query: { 'custom_info.chain_id': ctx.params.chainid },
-			});
+			const operatorAddress = ctx.params.operatorAddress;
+			let needNextKey = true;
+			let query: QueryOptions = { 'custom_info.chain_id': ctx.params.chainid };
+			if (operatorAddress) {
+				query['operator_address'] = operatorAddress;
+				needNextKey = false;
+			}
+			if (ctx.params.nextKey) {
+				query._id = { $gt: new ObjectId(ctx.params.nextKey) };
+				ctx.params.pageOffset = 0;
+				ctx.params.countTotal = false;
+			}
+			let [result, count]: [any[], number] = await Promise.all([
+				this.adapter.find({
+					query: query,
+					limit: ctx.params.pageLimit,
+					offset: ctx.params.pageOffset,
+					// @ts-ignore
+					sort: '_id',
+				}),
+				this.adapter.count({
+					query: query,
+				}),
+			]);
 			response = {
 				code: ErrorCode.SUCCESSFUL,
 				message: ErrorMessage.SUCCESSFUL,
 				data: {
 					validators: result,
 					count: count,
+					nextKey: needNextKey && result.length ? result[result.length - 1]._id : null,
 				},
 			};
 		} catch (error) {
